<resources>
    <string name="app_name">DigiDuka</string>
    <string name="title_activity_main">Digiduka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="sign_out">sign out</string>
    <string name="generateReports">generate reports</string>

    <!--creating new product strings-->
    <string name="product_name_hint">Enter name of product</string>
    <string name="product_price_hint">Price</string>
    <string name="new_product_view_title">Enter new product.</string>
    <string name="new_product_button_text">Create Product</string>
    <string name="product_description_hint">Short description</string>
    <string name="product_variation_quantity_hint">Quantity</string>
    <string name="product_variation_price_hint">Price</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Record Keeping</string>
    <string name="slide_1_desc">Digiduka helps maintain accurate and concise records of the sales and stock addition.</string>
    <string name="slide_2_title">Manage Stock levels.</string>
    <string name="slide_2_desc">Have control of the stock by monitoring the stock and inventory levels.</string>
    <string name="slide_3_title">Generate sales and stock reports.</string>
    <string name="slide_3_desc">Digiduka generates simplified sales and stock reports on a daily, weekly, monthly and an</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="app_intro">app intro</string>
    <string name="product__quantity_hint">Quantity</string>
    <string name="product_buying_price_hint">Buying Price</string>
    <string name="product_selling_price_hint">Selling Price</string>
    <string name="add_product_button">Add Product</string>


    <!--end-->
</resources>
