<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="300"
        app:showAsAction="never"
        />
    <item android:id="@+id/intro"
        android:title="@string/app_intro"
        android:orderInCategory="300"
        app:showAsAction="never"
        />
</menu>
