<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addProductFragmentParent"
    tools:context="com.digiduka.digiduka.ui.AddProductFragment">
    <TextView
        android:id="@+id/newProductPageTitle"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/new_product_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameEditWrapper"
        android:layout_width="@dimen/new_product_fragment_width"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newProductPageTitle">

        <AutoCompleteTextView
            android:id="@+id/nameOfProductEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_hint"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/descriptionOfProductEditWrapper"
        android:layout_width="@dimen/new_product_fragment_width"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditWrapper">
        <AutoCompleteTextView
            android:id="@+id/descriptionOfProductEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description_hint"
            android:inputType="textMultiLine"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/productSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionOfProductEditWrapper"
        app:layout_constraintRight_toRightOf="parent">
        <AutoCompleteTextView
            android:id="@+id/productSizeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product__quantity_hint"
            android:inputType="text"
            android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/productBuyingPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productSize"
        app:layout_constraintRight_toRightOf="parent">
        <AutoCompleteTextView
            android:id="@+id/productBuyingPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_buying_price_hint"
            android:gravity="center"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/productSellingPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productBuyingPrice"
        app:layout_constraintRight_toRightOf="parent">
        <AutoCompleteTextView
            android:id="@+id/productSellingPriceEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_selling_price_hint"
            android:gravity="center"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/newProductButton"
        android:text="@string/new_product_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/productSellingPrice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
